# nasa-space-apps-2024

./: .gitignore  Apollo_data_collection.ipynb  AutoEncoderWitek.ipynb  Autoencoder.ipynb  Classifier.ipynb  Dataloader.py  Models.py  conv_autoencoder.pth  data_processing.ipynb  demo_notebook.ipynb  pyproject.toml  tsne.ipynb
data/mars/: .gitignore
data/seismic_autoencoder_data/: .gitignore
models/: classifier.pth  encoder.pth  witek_autoencoder.pth
simulation/: README.md  run_sim.py
simulation/config/: default_sim_config.json
simulation/resources/: xa.s12.00.mhz.1973-03-17HR00_evNONE.mseed
simulation/src/: LoggingHandler.py  Node.py  Simulation.py  TelemetryLoader.py
simulation/src/ground_station/: GroundStation.py
simulation/src/rover/: Rover.py
simulation/src/rover/subsystems/: Instrument.py
