[tool.poetry]
name = "nasa-space-apps-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
requests = "^2.32.3"
obspy = "^1.4.1"
matplotlib = "^3.9.2"
jupyterlab = "^4.2.5"
future = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
